--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
   "dependencies": {
     "babel-polyfill": "6.3.14",
     "babel-runtime": "6.3.19",
+    "bootstrap-css": "3.0.0",
     "compression": "1.6.1",
     "cross-env": "1.0.7",
     "ejs": "2.4.1",
     "express": "4.13.4",
     "express-ejs-layouts": "2.0.0",
+    "micro-emitter": "1.1.14",
     "react": "0.14.6",
     "react-dom": "0.14.6",
     "webpack": "1.12.12"
